--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.modal-wrapper {
+    
+}
+.modal {
+    width: 600px; 
+    min-height: 500px;
+    transform: translate(-50%, -50%);
+}
+
+.container-wrapper {
+    width: min(90%, 1064px)
+}
